tests/0005-assign-grouping.src.err
tests/0005-assign-grouping.src:2
ERROR: not yet implemented
 | (a) = "value";
         ^
